--- a/LoggingServiceDemo/ServiceLogging/ServiceLogging.csproj
+++ b/LoggingServiceDemo/ServiceLogging/ServiceLogging.csproj
@@ -7,5 +7,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.7" />
+    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
   </ItemGroup>
 </Project>
