--- a/LoggingServiceDemo/Web/appsettings.json
+++ b/LoggingServiceDemo/Web/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "EventBusOptions": {
+  "LogConfiguration": {
     "MessageBrokerUrl": "nats://localhost:4222",
     "LoggingCommandSubject": "Service.Logging.Log"
   },
