--- a/LoggingServiceDemo/ServiceLogging/ServiceLogging.csproj
+++ b/LoggingServiceDemo/ServiceLogging/ServiceLogging.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.7" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
 </Project>
