--- a/LoggingServiceDemo/ServiceOne/appsettings.json
+++ b/LoggingServiceDemo/ServiceOne/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "LogConfiguration": {
+    "MessageBrokerUrl": "nats://localhost:4222",
+    "LoggingCommandSubject": "Service.Logging.Log"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
